<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hri_emotion_models</name>
  <version>0.0.0</version>
  <description>Models used for emotion recognition on PAL robots</description>
  <maintainer email="sara.cooper@pal-robotics.com">Sara Cooper</maintainer>
  <license>PAL Robotics S.L.</license>
  <author email="sara.cooper@pal-robotics.com">Sara Cooper</author>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
